# eleven

./: Cargo.toml  README.md  eleven_fc_game_plan.md  eleven_fc_game_plan_kr.md  eleven_fc_phase1_plan.md
ARCHIVED/: eleven_fc_phase0_plan.md
crates/app-desktop/: Cargo.toml
crates/app-desktop/src/: main.rs
crates/decision-plugin/: Cargo.toml
crates/decision-plugin/src/: context.rs  engine.rs  intent.rs  lib.rs  prompt.rs
crates/highlight-plugin/: Cargo.toml
crates/nlg-plugin/: Cargo.toml
crates/sim-core/: Cargo.toml
crates/sim-core/src/: decision.rs  events.rs  game.rs  lib.rs  physics.rs  types.rs
